Folia fixes